# atelier

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  commitlint.config.cjs  justfile  pyproject.toml
.beads/: README.md  issues.jsonl
.githooks/: bootstrap.sh  commit-msg  post-checkout  pre-commit  pre-push  worktree-bootstrap.sh
.github/workflows/: ci.yml  commitlint.yml  release-artifacts.yml  release-please.yml
docs/: SPEC-external-ticket-integration.md  SPEC.md  atelier-name.md  atelier-store-contract.md  beads-adoption-guide.md  beads-client-contract.md  beads-facade-inventory.json  beads-facade-inventory.md  beads-prefix-migration.md  beads-store-parity.md  behavior.md  dependency-lineage-repair.md  dogfood.md  hotspot-architecture-contract.md  in-memory-beads-command-contract.md  in-memory-beads-testing-guide.md  inspiration.md  molecules-proposal.md  north-star-review-gate.md  north-star.md  northern-expedition.md  planner-store-migration-contract.md  projected-skill-runtime-contract.md  publish-store-migration-contract.md  rethinking-atelier.md  runtime-env-subprocess-inventory.md  rust-migration.md  service-tier-pilot-decision.md  service-tier-proposal.md  stale-state-reconciliation.md  starter-kit.md  ticketing-proposal.md  trycycle-planning-convergence.md  trycycle-runtime-feasibility.md  versioning.md  why-not-git-worktree.md  work-command-breakdown-proposal.md  work-threaded-message-migration.md  worker-runtime-architecture.md  worker-store-migration-contract.md  (+1 more)
docs/plans/: 2026-03-25-trycycle-runtime-profiles.md  2026-03-26-trycycle-ready-planner-contract-test-plan.md  2026-03-26-trycycle-ready-planner-contract.md  2026-03-26-trycycle-runtime-profile-bounded-test-plan.md  2026-03-26-trycycle-runtime-profile-bounded.md  2026-03-28-trycycle-refinement-convergence.md  2026-03-29-trycycle-refinement-convergence-test-plan.md
evals/: publish-skill.prompts.csv  run-publish-skill-evals.py
scripts/: atelier-work.py  hotspot_complexity_report.py  lint-gate.sh  self_update_worker_supervisor.py  supported-python.sh
src/atelier/: __init__.py  agent_home.py  agent_teardown.py  agents.py  ai.py  auto_export.py  bd_invocation.py  bead_description_fields.py  beads.py  beads_context.py  branching.py  changeset_fields.py  changesets.py  cli.py  cli_defaults.py  codex.py  command.py  commit_messages.py  config.py  dependency_lineage.py  editor.py  exec.py  executable_work_validation.py  external_providers.py  external_registry.py  external_ticket_repair.py  external_tickets.py  git.py  github_issues_provider.py  hooks.py  integration.py  io.py  lifecycle.py  log.py  messages.py  models.py  paths.py  planner_contract.py  planner_issue_ownership.py  planner_overview.py  (+26 more)
templates/: project.env  project.yaml
templates/project/: AGENTS.md
templates/workspace/: AGENTS.md
tests/: __init__.py  conftest.py  test_agents.py  test_clean.py  test_cli.py  test_editor.py  test_list.py  test_models.py  test_templates.py  test_term_iterm2.py  test_term_wezterm.py  test_upgrade.py
tests/atelier/: __init__.py  bd_mock.py  helpers.py  test_agent_home.py  test_agent_teardown.py  test_agents.py  test_atelier_work.py  test_auto_export.py  test_bd_invocation.py  test_bd_invocation_guardrails.py  test_beads.py  test_beads_client.py  test_beads_context.py  test_beads_facade_inventory.py  test_beads_runtime_agent_hooks.py  test_beads_runtime_client.py  test_beads_runtime_external_reconcile.py  test_beads_runtime_issue_mutations.py  test_branching.py  (+63 more)
(+399 files in other folders)
