[project]
name = "atelier"
dynamic = ["version"]
description = "Workspace-based CLI for agent-assisted development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "platformdirs>=4.0.0",
  "pydantic>=2.0.0",
  "questionary>=2.0.0",
  "typer>=0.9.0",
]
license = { text = "MIT" }
keywords = ["workspace", "git", "agents"]
authors = [{ name = "Atelier" }]

[project.optional-dependencies]
dev = ["hypothesis>=6.0.0", "mdformat>=0.7.0", "pytest>=8.0.0", "ruff>=0.1.0"]

[tool.pytest.ini_options]
doctest_optionflags = ["ELLIPSIS"]

[project.scripts]
atelier = "atelier.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier"]
include = ["src/atelier/templates/**"]

[tool.hatch.build.targets.sdist]
include = ["src/atelier/templates/**"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.+)"

[tool.hatch.build.hooks.vcs]
version-file = "src/atelier/_version.py"
