[project]
name = "atelier"
dynamic = ["version"]
description = "Workspace-based CLI for agent-assisted development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "platformdirs>=4.0.0",
  "pydantic>=2.0.0",
  "questionary>=2.0.0",
  "rich>=13.0.0",
  "typer>=0.9.0",
]
license = { text = "MIT" }
keywords = ["workspace", "git", "agents"]
authors = [{ name = "Atelier" }]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.0.0",
  "mdformat>=0.7.0",
  "mdformat-frontmatter",
  "pytest>=8.0.0",
  "ruff>=0.1.0",
  "shellcheck-py",
]

[tool.pytest.ini_options]
doctest_optionflags = ["ELLIPSIS"]

[tool.mdformat]
extensions = ["frontmatter"]

[project.scripts]
atelier = "atelier.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier"]
include = ["src/atelier/templates/**", "src/atelier/skills/**"]


[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.+)"

[tool.hatch.build.hooks.vcs]
version-file = "src/atelier/_version.py"
